# IncrementalDelaunay

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  imgui.ini  playground.cpp  plottGraph.py
Experiments/: exps.cpp  printResults.py  results.txt
examples/: boids.cpp  deleteVertex.cpp  littleDeleteVertex.cpp  main.cpp  simulation.cpp  simulationnog.cpp
src/: constants.h  delaunay.cpp  delaunay.h  draw_delaunay.h  draw_triangulation.h  main.cpp  point_generator.cpp  point_generator.h  simulation.cpp  utils.h
src/GUI/: gui.cpp  gui.h
src/core/: shader.h
src/shaders/: fragment.frag  vertex.vert
src/simulation/: boidsSimulation.h  fluidSimulation.h  shakerSimulation.h
test/: tests.cpp
